# audio-webplayer

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  manage.py  pyproject.toml
backend/config/: celery.py  urls.py
backend/config/settings/: __init__.py  auth.py  base.py  celery.py  drf.py
backend/shared/helpers/: __init__.py  shift_position.py
backend/shared/serializers/: __init__.py  current_artist_default.py  read_only_model_serializer.py
backend/src/: manage.py
backend/src/albums/: v1_urls.py
backend/src/albums/managers/: __init__.py  album_manager.py
backend/src/albums/models/: album.py
backend/src/albums/querysets/: album_queryset.py
backend/src/albums/serializers/: __init__.py  album_read_only_serializer.py  album_serializer.py  album_with_tracks_read_only_serializer.py
backend/src/albums/views/: __init__.py  album_read_only_view.py  album_view.py
backend/src/api/: urls.py
backend/src/artists/: v1_urls.py
backend/src/artists/models/: artist.py
backend/src/artists/serializers/: __init__.py  artist_read_only_serializer.py  artist_serializer.py
backend/src/artists/signals/: __init__.py  create_user_artist.py
backend/src/artists/views/: artist_read_only_view.py  artist_view.py
backend/src/authentication/: apps.py  v1_urls.py
backend/src/authentication/permissions/: __init__.py
backend/src/metadata/: v1_urls.py
backend/src/music/: v1_urls.py
backend/src/oauth/: authentication.py  factories.py  middlewares.py  serializers.py  services.py  tests.py  urls.py  v1_urls.py  views.py
backend/src/playlists/: v1_urls.py
backend/src/search/: v1_urls.py
backend/src/statement/: apps.py  v1_urls.py
backend/src/tracks/: v1_urls.py
backend/src/users/: apps.py  managers.py  models.py  permissions.py  v1_urls.py
(+141 files in other folders)
