[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Maxim <mlyulenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
drf-yasg = "^1.21.7"
requests = "^2.31.0"
pillow = "^10.0.0"
pyjwt = "^2.8.0"
django-cors-headers = "^4.2.0"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
